--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8"
   },
   "scripts": {
     "start": "electron .",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "electron": "^25.0.0",
+    "electron-reloader": "^1.2.3",
     "webpack-node-externals": "^3.0.0"
   },
   "main": "public/electron.js",
